js 函数表达式

--- a/web/javascript高级程序设计/02_面象对象程序设计.md
+++ b/web/javascript高级程序设计/02_面象对象程序设计.md
@@ -242,14 +242,14 @@ function Person() {
 console.log(Person.prototype.constructor === Person);  // true
 ```
 
-![Person原型图](../../image-resources/web/Person原型.png)
+![Person原型图](../../image-resources/web/oop/Person原型.png)
 
 - 当调用构造函数创建一个新实例后，该实例的内部将包含一个指针(内部属性)，指向构造函数的原型对象,ECMA-262第5版中管这个指针叫[[Prototype]],在具体的实现上,一般这个指针被命名为__proto__，为了兼容一般用Object.setPrototypeOf()（写操作）、Object.getPrototypeOf()（读操作）、Object.create()（生成操作）代替操作这个__proto__属性
 - **每个构造函数都具有一个名为prototype的对象属性**，既然是对象属性，**所以prototype同样带有__proto__属性**
 - **每个对象的__proto__属性指向自身构造函数的prototype**
 - 由同一个构造函数构造的对象，共享相同的__proto__,也就是其构造函数的prototype
 
-![js原型图](../../image-resources/web/js原型.jpg)
+![js原型图](../../image-resources/web/oop/js原型.jpg)
 
 ```js
     // 构造函数
@@ -498,7 +498,7 @@ Person.prototype = {
 friend.sayName(); //error 
 ```
 
-![重写原型对象](../../image-resources/web/重写原型对象.jpg)
+![重写原型对象](../../image-resources/web/oop/重写原型对象.jpg)
 
 #### 原生对象的原型
 
@@ -670,3 +670,313 @@ friend.sayName(); //"Nicholas"
 ```
 
 ## 继承
+
+### 原型链
+
+- 让一个函数的prototype对象指向另一个函数类型的实例
+- 以下示例中，**通过重写SubType的prototype指向SuperType的实例，实现继承**
+- **SubType新增的方法与属性必须要在重写SubType的protoType之后**
+
+```js
+function SuperType(){
+    this.property = true;
+}
+
+SuperType.prototype.getSuperValue = function(){
+    return this.property;
+};
+
+function SubType(){
+    this.subproperty = false;
+}
+
+// prototype指向SuperType的实例，来实现继承SuperType
+SubType.prototype = new SuperType();
+
+// 重写prototype指向后新增方法
+SubType.prototype.getSubValue = function (){
+    return this.subproperty;
+};
+
+var instance = new SubType();
+alert(instance.getSuperValue()); //true
+```
+
+![原型链继承](../../image-resources/web/oop/原型链继承.png)
+
+- SubType.prototype 现在是 SuperType的实例
+- getSuperValue()是原型方法，仍然还在SuperType.prototype 中
+- property 是一个实例属性，位于 SubType.prototype中，也就是SuperType的实例中
+- **instance.constructor 现在指向的是 SuperType**，这是因为原来 SubType.prototype 中的 constructor 被重写了的缘故
+- instance.getSuperValue()会经历三个搜索步骤：
+    - 搜索实例
+    - 搜索 SubType.prototype，也就是SuperType的实例
+    - 搜索 SuperType.prototype，最后一步才会找到该方法。在找不到属性或方法的情况下，搜索过程总是要一环一环地前行到原型链末端才会停下来完整的
+
+![完整的原型链](../../image-resources/web/oop/完整的原型链.png)
+
+- SubType 继承了 SuperType，
+- SuperType 继承了 Object。当调用 instance.toString()
+
+### 确定原型和实例的关系
+
+- **instanceof** 操作符，主要用这个操作符来测试实例与原型链中出现过的构造函数
+
+```js
+alert(instance instanceof Object);    //true
+alert(instance instanceof SuperType); //true
+alert(instance instanceof SubType);   //true
+```
+
+- **isPrototypeOf()**,只要是原型链中出现过的原型，都可以说是该原型链所派生的实例的原型，因此 isPrototypeOf()方法也会返回 true
+
+```js
+alert(Object.prototype.isPrototypeOf(instance));    //true
+alert(SuperType.prototype.isPrototypeOf(instance)); //true
+alert(SubType.prototype.isPrototypeOf(instance));   //true
+```
+
+### 谨慎的定义方法
+
+- 子类型有时候需要重写超类型中的某个方法，或者需要添加超类型中不存在的某个方法。**但不管怎样，给原型添加方法的代码一定要放在替换原型的语句之后**
+- **即在通过原型链实现继承时，不能使用对象字面量创建原型方法,因为这样做就会重写原型链**
+
+```js
+ this.property = true;
+}
+SuperType.prototype.getSuperValue = function(){
+ return this.property;
+};
+function SubType(){
+ this.subproperty = false;
+}
+//继承了 SuperType
+SubType.prototype = new SuperType();
+//添加新方法
+SubType.prototype.getSubValue = function (){
+ return this.subproperty;
+};
+//重写超类型中的方法
+SubType.prototype.getSuperValue = function (){
+ return false;
+};
+var instance = new SubType();
+alert(instance.getSuperValue()); //false
+```
+
+### 原型链的问题
+
+- **包含引用类型值的原型属性会被所有实例共享；而这也正是为什么要在构造函数中，而不是在原型对象中定义属性的原因**
+- 在通过原型来实现继承时，原型实际上会变成另一个类型的实例。**原先的实例属性也就顺理成章地变成了现在的原型属性了**
+
+```js
+function SuperType(){
+    this.colors = ["red", "blue", "green"];
+}
+
+function SubType(){
+}
+
+//继承了 SuperType
+SubType.prototype = new SuperType();
+var instance1 = new SubType();
+instance1.colors.push("black");
+alert(instance1.colors); //"red,blue,green,black"
+
+var instance2 = new SubType();
+alert(instance2.colors); //"red,blue,green,black"
+```
+
+- **原型链的第二个问题是：在创建子类型的实例时，不能向超类型的构造函数中传递参数,实际上，应该说是没有办法在不影响所有对象实例的情况下，给超类型的构造函数传递参数。**
+
+### 组合继承
+
+- 组合继承（combination inheritance），有时候也叫做伪经典继承，指的是将原型链和借用构造函数的技术组合到一块，从而发挥二者之长的一种继承模式。
+- **其背后的思路是使用原型链实现对原型属性和方法的继承，而通过借用构造函数来实现对实例属性的继承**
+
+```js
+function SuperType(name){
+ this.name = name;
+ this.colors = ["red", "blue", "green"];
+}
+
+SuperType.prototype.sayName = function(){
+    alert(this.name);
+}
+
+function SubType(name, age){
+    //继承属性
+    SuperType.call(this, name);
+    this.age = age;
+}
+//继承方法
+SubType.prototype = new SuperType();
+
+SubType.prototype.constructor = SubType;
+SubType.prototype.sayAge = function(){
+    alert(this.age);
+};
+
+var instance1 = new SubType("Nicholas", 29);
+instance1.colors.push("black");
+alert(instance1.colors); //"red,blue,green,black"
+instance1.sayName(); //"Nicholas";
+instance1.sayAge(); //29
+
+var instance2 = new SubType("Greg", 27);
+alert(instance2.colors); //"red,blue,green"
+instance2.sayName(); //"Greg";
+instance2.sayAge(); //27
+```
+
+### 原型式继承
+
+- 是借助原型可以基于已有的对象创建新对象，同时还不必因此创建自定义类型
+- 在 object()函数内部，先创建了一个临时性的构造函数，然后将传入的对象作为这个构造函数的原型，最后返回了这个临时类型的一个新实例。从本质上讲，object()对传入其中的对象执行了一次浅复制
+- 在没有必要兴师动众地创建构造函数，而只想让一个对象与另一个对象保持类似的情况下，原型式继承是完全可以胜任的。
+- 不过别忘了，**包含引用类型值的属性始终都会共享相应的值，就像使用原型模式一样**
+
+```js
+function object(o){
+    function F(){}
+    F.prototype = o;
+    return new F();
+}
+```
+
+```js
+var person = {
+    name: "Nicholas",
+    friends: ["Shelby", "Court", "Van"]
+};
+
+var anotherPerson = object(person);
+anotherPerson.name = "Greg";
+anotherPerson.friends.push("Rob");
+
+var yetAnotherPerson = object(person);
+yetAnotherPerson.name = "Linda";
+yetAnotherPerson.friends.push("Barbie");
+alert(person.friends); //"Shelby,Court,Van,Rob,Barbie"
+```
+
+- ECMAScript 5 通过新增 Object.create()方法规范化了原型式继承。
+    - 一个用作新对象原型的对象
+    - （可选的）一个为新对象定义额外属性的对象
+
+```js
+var person = {
+    name: "Nicholas",
+    friends: ["Shelby", "Court", "Van"]
+};
+
+var anotherPerson = Object.create(person);
+anotherPerson.name = "Greg";
+anotherPerson.friends.push("Rob");
+
+var yetAnotherPerson = Object.create(person);
+yetAnotherPerson.name = "Linda";
+yetAnotherPerson.friends.push("Barbie");
+alert(person.friends); //"Shelby,Court,Van,Rob,Barbie"
+```
+
+```js
+var person = {
+    name: "Nicholas",
+    friends: ["Shelby", "Court", "Van"]
+};
+
+var anotherPerson = Object.create(person, {
+    name: {
+        value: "Greg"
+    }
+});
+
+alert(anotherPerson.name); //"Greg"
+```
+
+### 寄生式继承
+
+- 寄生式继承的思路与寄生构造函数和工厂模式类似，即创建一个仅用于封装继承过程的函数，该函数在内部以某种方式来增强对象，最后再像真地是它做了所有工作一样返回对象
+- 在主要考虑对象而不是自定义类型和构造函数的情况下，寄生式继承也是一种有用的模式,前面示范继承模式时使用的 object()函数不是必需的；任何能够返回新对象的函数都适用于此模式
+- **使用寄生式继承来为对象添加函数，会由于不能做到函数复用而降低效率；这一点与构造函数模式类似**
+
+```js
+function createAnother(original){
+    var clone = object(original); //通过调用函数创建一个新对象
+    clone.sayHi = function(){ //以某种方式来增强这个对象
+        alert("hi");
+    };
+    return clone; //返回这个对象
+}
+```
+
+### 寄生组合式继承
+
+- **组合继承最大的问题就是无论什么情况下，都会调用两次超类型构造函数**：一次是在创建子类型原型的时候，另一次是在子类型构造函数内部
+
+```js
+function SuperType(name){
+    this.name = name;
+    this.colors = ["red", "blue", "green"];
+}
+
+SuperType.prototype.sayName = function(){
+    alert(this.name);
+};
+
+function SubType(name, age){
+    SuperType.call(this, name); //第二次调用 SuperType()
+    this.age = age;
+}
+
+SubType.prototype = new SuperType(); //第一次调用 SuperType()
+SubType.prototype.constructor = SubType;
+SubType.prototype.sayAge = function(){
+    alert(this.age);
+};
+```
+
+- **在第一次调用 SuperType 构造函数时，SubType.prototype 会得到两个属性**：name 和 colors；它们都是 SuperType 的实例属性，只不过现在位于 SubType 的原型中。
+- **当调用 SubType 构造函数时，又会调用一次 SuperType 构造函数，这一次又在新对象上创建了实例属性 name 和 colors。于是，这两个属性就屏蔽了原型中的两个同名属性**
+
+![组合继承模式](../../image-resources/web/oop/组合继承模式.png)
+
+- 所谓寄生组合式继承，**即通过借用构造函数来继承属性，通过原型链的混成形式来继承方法**
+- 其背后的基本思路是：**不必为了指定子类型的原型而调用超类型的构造函数，我们所需要的无非就是超类型原型的一个副本而已。本质上，就是使用寄生式继承来继承超类型的原型，然后再将结果指定给子类型的原型**
+
+```js
+function SuperType(name){
+    this.name = name;
+    this.colors = ["red", "blue", "green"];
+}
+
+SuperType.prototype.sayName = function(){
+    alert(this.name);
+};
+
+function SubType(name, age){
+    SuperType.call(this, name);
+    this.age = age;
+}
+
+inheritPrototype(SubType, SuperType);
+
+SubType.prototype.sayAge = function(){
+    alert(this.age);
+};
+
+function inheritPrototype(subType, superType){
+    var prototype = object(superType.prototype); //创建对象
+    prototype.constructor = subType; //增强对象
+    subType.prototype = prototype; //指定对象
+}
+
+function object(o){
+    function F(){}
+    F.prototype = o;
+    return new F();
+}
+```
+
+- 这个例子的高效率体现在它只调用了一次 SuperType 构造函数，**并且因此避免了在 SubType.prototype 上面创建不必要的、多余的属性。与此同时，原型链还能保持不变**；因此，还能够正常使用instanceof 和 isPrototypeOf()。开发人员普遍认为寄生组合式继承是引用类型最理想的继承范式
