--- a/web/javascript高级程序设计/03_函数表达式.md
+++ b/web/javascript高级程序设计/03_函数表达式.md
@@ -220,6 +220,8 @@ function createFunctions(){
 
 ### 关于this对象
 
+- [深入理解javascript原型和闭包（10）——this](https://www.cnblogs.com/wangfupeng1988/p/3988422.html)
+
 - 在闭包中使用 this 对象也可能会导致一些问题。
 - this 对象是在运行时基于函数的执行环境绑定的：在全局函数中，this 等于 window，而当函数被作为某个对象的方法调用时，this 等于那个对象。
 - **匿名函数的执行环境具有全局性，因此其 this 对象通常指向 window**
