--- a/web/javascript高级程序设计/01_基础概念.md
+++ b/web/javascript高级程序设计/01_基础概念.md
@@ -1,6 +1,5 @@
 # 基本概念
 
-
 ## 严格模式
 
 ```js
@@ -33,7 +32,7 @@ alert(null == undefined);    //true
 
 - undefined -> false
 - Object, 任何对象 -> true,null -> false
-- 任何非零字符串(包括无穷大) -> true, 0与NaN -> false
+- 任何非零数字(包括无穷大) -> true, 0与NaN -> false
 - 任何非空字符串 -> true,空字符串 -> false
 
 ### Number类型
@@ -59,6 +58,7 @@ alert (isFinite(result));  // false
 - Not a Number，表示一个本来要返回数值的操作数未返回数值的情况，这样不会抛错了
 - 任何涉及NaN的操作（如NaN/10）都会返回NaN
 - NaN和任何值都不相等，包括NaN本身
+- isNan
 
 ```js
 alert(NaN == NaN);  // false
@@ -66,13 +66,13 @@ alert(NaN == NaN);  // false
 
 #### Number()
 
-- Boolean, true->1, false -> 0
-- null,返回0
 - undefined 返回 NaN
+- null,返回0
+- Boolean, true->1, false -> 0
 - 字符串
     - 只包含数字，转换为十进制的数值，前导0会被忽略,"011"返回11
     - 有效的十六进制，转为对应的十进制
-    - 空字符串转换为0
+    - **空字符串转换为0**
     - 包含上述格式之外字符的，转换为NaN
 - 如果是对象，先使用valueOf()转为数字，如果返回是NaN,然后调用toString()转为字符串，然后再转换字符串为数字
 
@@ -107,7 +107,7 @@ parseInt("070");  // 56 八进制
 ### 布尔操作符
 
 - 逻辑非操作符也可以用于将一个值转换为与其对应的布尔值
-- **同时使用两个逻辑非操作符，实际上就会模拟 Boolean()转型函数的行为**。其中，第一个逻辑非操作会基于无论什么操作数返回一个布 尔值，而第二个逻辑非操作则对该布尔值求反，于是就得到了这个值真正对应的布尔值。当然，最终结 果与对这个值使用 Boolean()函数相同
+- **同时使用两个逻辑非操作符，实际上就会模拟 Boolean()转型函数的行为**。其中，第一个逻辑非操作会基于无论什么操作数返回一个布尔值，而第二个逻辑非操作则对该布尔值求反，于是就得到了这个值真正对应的布尔值。当然，最终结果与对这个值使用 Boolean()函数相同
 
 ### 逻辑与
 
@@ -131,6 +131,7 @@ parseInt("070");  // 56 八进制
 
 ```js
 // 避免myObject为空或者undefined
+// 但是这种只是确定myObject是对象才正确，如果maybeNull是包装的Boolean false,则这里会出问题
 var myObject = maybeNull || {};
 ```
 
@@ -245,7 +246,7 @@ NaN >= 3; // false
 
 ```js
 null == undefined  // true
-"NaN" == NaN       // false, 有数值，字符串转为数字
+"NaN" == NaN       // false, 有数值，字符串转为数字NaN,但NaN是不相等的
 5 == NaN           // false
 NaN == NaN         // false
 NaN != NaN         // true
@@ -279,6 +280,7 @@ var num = (5,1,4,8, 0);  // num的值为0
 ### for in
 
 - **通过 for-in 循环输出的属性名的顺序是不可预测的**
+- 通过for-in循环只能针对key,而不是value
 - 如果表示要迭代的对象的变量值为 null 或 undefined，for-in 语句会抛出错误。 ECMAScript 5 更正了这一行为;对这种情况不再抛出错误，而只是不执行循环体
 - **为了保证最大限度的兼容性，建议在使用 for-in 循环之前，先检测确认该对象的值不是 null 或 undefined**
 
@@ -336,6 +338,8 @@ switch (true) {
     default:
         alert("More than 20.");
 }
+
+// More than 20.
 ```
 
 ## 函数
@@ -424,8 +428,9 @@ function createPerson(name){
     var localPerson = new Object();
     localPerson.name = name;
  }
-var globalPerson = createPerson("Nicholas"); // 手工解除 globalPerson 的引用
-globalPerson = null;
+var globalPerson = createPerson("Nicholas");
+// ...
+globalPerson = null; // 手工解除 globalPerson 的引用
 ```
 
 ## 引用对象
@@ -619,7 +624,7 @@ alert(colors.length); //2
 - reverse()和 sort()
 
 ```js
-var values = [1, 2, 3, 4, 5]; 
+var values = [1, 2, 3, 4, 5];
 values.reverse();
 alert(values); //5,4,3,2,1
 ```
@@ -673,7 +678,7 @@ alert(colors2);    //red,green,blue,yellow,black,brown
 
 ### slice()
 
-- 基于当前数组中的一或多个项创建一个新数组，**与golang中不同，修改数组不会影响原数组**
+- **基于当前数组中的一或多个项创建一个新的数组拷贝，与golang中不同，修改数组不会影响原数组**
 - slice()方法可以 接受一或两个参数，即要返回项的起始和结束位置
 - 在只有一个参数的情况下，slice()方法返回从该参数指定位置开始到当前数组末尾的所有项
 - 如果有两个参数，该方法返回起始和结束位置之间的项,但不包括结束位置的项
@@ -684,6 +689,13 @@ var colors2 = colors.slice(1);
 var colors3 = colors.slice(1,4);
 alert(colors2);   //green,blue,yellow,purple
 alert(colors3);   //green,blue,yellow
+
+let arr2 = [1, 2, 3];
+let arr3 = arr2.slice(0, 1);
+arr3[0] = 100;
+console.log(arr3);  // [100]
+// 与golang不同，不会修改原数组
+console.log(arr2);  // [1, 2, 3]
 ```
 
 - **如果 slice()方法的参数中有一个负数，则用数组长度加上该数来确定相应的位置**。例如，在一个包含 5 项的数组上调用 slice(-2,-1)与调用 slice(3,4)得到的 结果相同。如果结束位置小于起始位置，则返回空数组
@@ -696,18 +708,15 @@ alert(colors3);   //green,blue,yellow
     - item1, ..., itemX 可选。向数组添加的新项目
 
 ```js
-var colors = ["red", "green", "blue"];
-var removed = colors.splice(0,1);
-alert(colors); // green,blue
-alert(removed); // red，返回的数组中只包含一项
+// 插入元素采用这种方法
+// index,表示第一个插入的位置
+let aar4 = [1, 2, 3, 4, 5, 6];
+aar4.splice(1, 0, 100);
+console.log(aar4);   // [1, 100, 2, 3, 4, 5, 6]
 
-removed = colors.splice(1, 0, "yellow", "orange");
-alert(colors); // green,yellow,orange,blue
-alert(removed); // 返回的是一个空数组
-
-removed = colors.splice(1, 1, "red", "purple");
-alert(colors); // green,red,purple,orange,blue
-alert(removed); // yellow，返回的数组中只包含一项
+let aar5 = [1, 2, 3, 4, 5, 6];
+aar5.splice(1, 1);
+console.log(aar5);  // [1, 3, 4, 5, 6]
 ```
 
 ### 迭代方法
@@ -989,6 +998,8 @@ alert(sayHi.length);        //0
 
 #### apply，call， bind
 
+[理解JS中的call、apply、bind方法](https://www.cnblogs.com/libin-1/p/6069031.html)
+
 - 每个函数都包含两个非继承而来的方法:apply()和 call()
 - **这两个方法的用途都是在特定的作用域中调用函数，实际上等于设置函数体内 this 对象的值**
 - apply()方法接收两个参数:
@@ -1021,7 +1032,7 @@ alert(callSum1(10,10));   //20
 alert(callSum2(10,10));   //20
 ```
 
-- **传递参数并非 apply()和 call()真正的用武之地;它们真正强大的地方是能够扩充函数 赖以运行的作用域**
+- **传递参数并非 apply()和 call()真正的用武之地;它们真正强大的地方是能够扩充函数赖以运行的作用域**
 - 使用 call()(或 apply())来扩充作用域的最大好处，就是对象不需要与方法有任何耦合关系
 
 ```js
@@ -1044,7 +1055,7 @@ sayColor.call(o);        // blue
 ```
 
 - ECMAScript 5 还定义了一个方法:bind()
-- 这个方法会创建一个函数的实例，其 this 值会被绑 定到传给 bind()函数的值
+- **这个方法会创建一个函数的实例，如果想调用，必须再加上()**，其 this 值会被绑 定到传给 bind()函数的值
 
 ```js
 window.color = "red";
@@ -1230,16 +1241,16 @@ alert(String.fromCharCode(104, 101, 108, 108, 111)); //"hello"
 
 - encodeURI()和 encodeURIComponent()方法可以对 URI进行编码
     - encodeURI()主要用于整个URI
-    - URIComponent()主要用于对URI中的某一段进行编码
+    - URIComponent()主要用于对URI中的某一段进行编码,只要这一段有特殊字符，就会进行编码
 
 ```js
 var uri = "http://www.wrox.com/illegal value.htm#start";
 
 // http://www.wrox.com/illegal%20value.htm#start
 console.log(encodeURI(uri));
+
 // http%3A%2F%2Fwww.wrox.com%2Fillegal%20value.htm%23start
 console.log(encodeURIComponent(uri));
-
 ```
 
 - 与 encodeURI()和 encodeURIComponent()方法对应的两个方法分别是 decodeURI()和 decodeURIComponent()
