--- a/web/javascript高级程序设计/03_函数表达式.md
+++ b/web/javascript高级程序设计/03_函数表达式.md
@@ -221,9 +221,9 @@ function createFunctions(){
 ### 关于this对象
 
 - [深入理解javascript原型和闭包（10）——this](https://www.cnblogs.com/wangfupeng1988/p/3988422.html)
+- [JS中this关键字详解](https://www.cnblogs.com/lisha-better/p/5684844.html)
 
-- 在闭包中使用 this 对象也可能会导致一些问题。
-- this 对象是在运行时基于函数的执行环境绑定的：在全局函数中，this 等于 window，而当函数被作为某个对象的方法调用时，this 等于那个对象。
+- **this对象是在运行时基于函数的执行环境绑定的**：在全局函数中，this 等于 window，而当函数被作为某个对象的方法调用时，this 等于那个对象。
 - **匿名函数的执行环境具有全局性，因此其 this 对象通常指向 window**
 - **每个函数在被调用时都会自动取得两个特殊变量：this 和 arguments。内部函数在搜索这两个变量时，只会搜索到其活动对象为止，因此永远不可能直接访问外部函数中的这两个变量**
 
@@ -234,15 +234,14 @@ var object = {
     name : "My Object",
     getNameFunc : function(){
         return function(){
-            // 首先这只是一个匿名函数，不是一个闭包，作用域链是 匿名函数-》全局对象
-            // 内部的闭包匿名函数对象，因为在调用时其自身的执行环境也会有this对象
-            // 搜索是由内向外的，只要内部搜索到了，就不会继续搜索
-            // 理解的话，可以参考java内部类在引用外部类的对象时，使用的是Outer.this.***
             return this.name;
         };
     }
 };
 
+// 具体调用相当于
+// var f = object.getNameFunc();
+// f();
 alert(object.getNameFunc()()); //"The Window"（在非严格模式下）
 ```
 
