js 面象对象设计

--- a/web/javascript高级程序设计/02_面象对象程序设计.md
+++ b/web/javascript高级程序设计/02_面象对象程序设计.md
@@ -307,10 +307,58 @@ console.log(Person.prototype.isPrototypeOf(p1));
 
 - 每当代码读取某个对象的某个属性时，都会执行一次搜索，目标是具有给定名字的属性。
     - **搜索首先从对象实例本身开始**。如果在实例中找到了具有给定名字的属性，则返回该属性的值;
-    - **如果没有找到，则继续搜索指针指向的原型对象，在原型对象中查找具有给定名字的属性**
-- **虽然可以通过对象实例访问保存在原型中的值，但却不能通过对象实例重写原型中的值**
+    - **如果没有找到，则继续搜索其__proto__，也就是在其构造函数的原型对象中查找具有给定名字的属性**
+- **可以通过对象实例读取原型中的值，但却不能通过对象实例重写原型中的值**
+- **可以通过原型读取与修改实例中的属性**
+
+```js
+function Foo(name) {
+    this.thisName = name;
+    this.sayAge = function () {
+        console.log(this.age);
+    };
+    this.setAge = function () {
+        this.age = "101";
+    }
+}
+
+Foo.prototype.age = 1000;
+Foo.prototype.thisName = "prototypeName";
+
+Foo.prototype.sayName = function () {
+    console.log(this.thisName);
+};
+
+Foo.prototype.writeName = function () {
+    this.thisName = "writeName";
+};
+
+let f = new Foo("OriginName", 100);
+
+// 查找优先实例属性
+f.sayName();  // OriginName
+
+// 原型属性
+console.log(Object.getPrototypeOf(f).thisName); // prototypeName
+
+// 修改也是优先修改实例属性
+f.writeName();
+f.sayName();  // writeName
+console.log(Object.getPrototypeOf(f).thisName); // prototypeName
+
+// 实例属性不存在，读取原型属性
+f.sayAge();  // 1000
+
+// 不可能使用实例修改原型中的值，实际上是给实例新增了一个age属性
+f.setAge();
+
+f.sayAge(); // 101
+
+console.log(Object.getPrototypeOf(f).age); // 1000
+```
+
 - **如果我们在实例中添加了一个属性，而该属性与实例原型中的一个属性同名，那我们就在实例中创建该属性，该属性将会屏蔽原型中的那个属性**
-- **当为对象实例添加一个属性时，这个属性就会屏蔽原型对象中保存的同名属性**;换句话说，添加这个属性只会阻止我们访问原型中的那个属性，但不会修改那个属性。即使将这个属性设置为 null，也只会在实例中设置这个属性，而不会恢复其指向原型的连接。**使用delete 操作符则可以完全删除实例属性，从而让我们能够重新访问原型中的属性**
+- **当为对象实例添加一个属性时，这个属性就会屏蔽原型对象中保存的同名属性**;换句话说，添加这个属性只会阻止我们访问原型中的那个属性，但不会修改那个属性。即使将这个属性设置为 null，也只会在实例中设置这个属性，而不会恢复其指向原型的连接。- **使用delete 操作符则可以完全删除实例属性，从而让我们能够重新访问原型中的属性**
 
 ```js
 function Person(){
@@ -386,37 +434,66 @@ person.name = "Greg";
 alert(hasPrototypeProperty(person, "name")); //false
 ```
 
-- 在使用 for-in 循环时，返回的是所有**能够通过对象访问的、可枚举的（enumerated）属性**，其中既包括存在于实例中的属性，也包括存在于原型中的属性。- 屏蔽了原型中不可枚举属性（即将[[Enumerable]]标记为 false 的属性）的实例属性也会在 for-in 循环中返回，因为根据规定，所有开发人员定义的属性都是可枚举的
+- for in的返回所有可枚举(enumerable为true的属性)
+    - 自身属性返回
+    - 原型属性返回
+    - enumerable为false的属性不返回
 
-- **ECMAScript 5 的 Object.keys()**,这个方法接收一个对象作为参数，**返回一个包含所有可枚举属性的字符串数组**
+- Object.keys返回实例自身的的可枚举(enumerable为true的属性)
+    - 原型属性不返回
+    - enumerable为false的属性不返回
 
-```js
-function Person(){
-}
-Person.prototype.name = "Nicholas";
-Person.prototype.age = 29;
-Person.prototype.job = "Software Engineer";
-Person.prototype.sayName = function(){
-    alert(this.name);
-};
-
-var keys = Object.keys(Person.prototype);
-alert(keys); //"name,age,job,sayName"
-
-var p1 = new Person();
-p1.name = "Rob";
-p1.age = 31;
-
-// 
-var p1keys = Object.keys(p1);
-alert(p1keys); //"name,age" 
-```
-
-- **如果你想要得到所有实例属性，无论它是否可枚举**，都可以使Object.getOwnPropertyNames()方法
+- Object.getOwnPropertyNames返回自身的属性的名字集合
+    - 原型属性不返回
+    - enumerable为true,false都返回
 
 ```js
-var keys = Object.getOwnPropertyNames(Person.prototype);
-alert(keys); //"constructor,name,age,job,sayName"
+    function TestForIn() {
+        this.a = 100;
+    }
+
+    TestForIn.prototype.b = "b";
+
+    let testforin = new TestForIn();
+
+    Object.defineProperty(testforin, "c", {
+        enumerable : true,
+        value : "c"
+    });
+
+    Object.defineProperty(testforin, "d", {
+        enumerable : false,
+        value : "d"
+    });
+
+    console.log(testforin.c);  // c
+    console.log(testforin.d);  // d
+
+    // 返回原型属性与实例属性，a b c
+    // d因为enumerable为false 不返回
+    console.log("for in :");
+    for (let p in testforin) {
+        console.log(p);
+    }
+    // a c b
+
+    // b 不返回因为是原型属性
+    // d 不返回因为enumerable为false
+    let keys = Object.keys(testforin);
+    console.log("Object.keys:");
+    for (let key of keys) {
+        console.log(key);
+    }
+    // a c
+
+    // 只要是自身属性就返回
+    // enumerable为false或true都返回
+    let ownKeys = Object.getOwnPropertyNames(testforin);
+    console.log("Object.getOwnPropertyNames:")
+    for (let key of ownKeys) {
+        console.log(key);
+    }
+    // a c d
 ```
 
 #### 更简单的原型语法
@@ -478,8 +555,7 @@ Person.prototype.sayHi = function(){
 friend.sayHi(); //"hi"（没有问题！）
 ```
 
-- 尽管可以随时为原型添加属性和方法，并且修改能够立即在所有对象实例中反映出来，但如果是重写整个原型对象，那么情况就不一样了。我们知道，**调用构造函数时会为实例添加一个指向最初原型的[[Prototype]]指针，而把原型修改为另外一个对象就等于切断了构造函数与最初原型之间的联系**。
-- **实例中的指针仅指向原型，而不指向构造函数**
+- 尽管可以随时为原型添加属性和方法，并且修改能够立即在所有对象实例中反映出来，但如果是重写整个原型对象，那么情况就不一样了。我们知道，**调用构造函数时会为实例添加一个指向最初原型的[[Prototype]]指针，而把原型修改为另外一个对象就等于切断了构造函数与最初原型之间的联系**
 
 ```js
 function Person(){
@@ -495,6 +571,9 @@ Person.prototype = {
         alert(this.name);
     }
 };
+// friend的__proto__属性是一个指针，指向调用构造函数时Person的prototype属性
+// 后面重写了整个原型对象，但friend的__proto__属性指向不变
+// 所以这里sayName属性
 friend.sayName(); //error
 ```
 
@@ -503,8 +582,7 @@ friend.sayName(); //error
 #### 原生对象的原型
 
 - 原型模式的重要性不仅体现在创建自定义类型方面，就连所有原生的引用类型，都是采用这种模式创建的。
-- 通过原生对象的原型，不仅可以取得所有默认方法的引用，而且也可以定义新方法
-- 但不推荐给原生对象的原型添加方法
+- 通过原生对象的原型，不仅可以取得所有默认方法的引用，而且也可以定义新方法，**但不推荐给原生对象的原型添加方法**
 
 ```js
 String.prototype.startsWith = function (text) {
@@ -518,7 +596,7 @@ alert(msg.startsWith("Hello")); //true
 
 - 原型中所有属性是被很多实例共享的，这种共享对于函数非常合适
 - 对于那些包含基本值的属性倒也说得过去，**对于包含引用类型值的属性来说，问题就比较突出了**
-- 实例一般都是要有属于自己的全部属性的
+- 实例一般都是要有属于自己的全部属性，这些属性不能被共享
 
 ```js
 function Person(){
