--- a/web/javascript高级程序设计/02_面象对象程序设计.md
+++ b/web/javascript高级程序设计/02_面象对象程序设计.md
@@ -698,7 +698,7 @@ function Person(name, age, job){
     return o;
 }
 var friend = new Person("Nicholas", 29, "Software Engineer");
-friend.sayName(); //"Nicholas" 
+friend.sayName(); //"Nicholas"
 ```
 
 - 这个模式可以在特殊的情况下用来为对象创建构造函数。**假设我们想创建一个具有额外方法的特殊数组。由于不能直接修改 Array 构造函数，因此可以使用这个模式**
@@ -793,8 +793,31 @@ alert(instance.getSuperValue()); //true
 
 ![完整的原型链](../../image-resources/web/oop/完整的原型链.png)
 
-- SubType 继承了 SuperType，
-- SuperType 继承了 Object。当调用 instance.toString()
+- SubType 继承了 SuperType，SuperType 继承了 Object
+
+```js
+    function SuperType() {
+        this.superProperty = "superProperty"
+    }
+
+    SuperType.prototype.getSuperValue = function () {
+        return this.superProperty;
+    };
+
+    function SubType() {
+      this.subProperty = "subProperty";
+    }
+
+    SubType.prototype = new SuperType();
+    SubType.prototype.getSubValue = function () {
+        return this.subProperty;
+    };
+
+    let sub = new SubType();
+    console.log(sub instanceof SubType);   // true
+    console.log(sub instanceof SuperType); // true
+    console.log(SubType.prototype.constructor === SuperType.prototype.constructor); // true
+```
 
 ### 确定原型和实例的关系
 
@@ -816,12 +839,13 @@ alert(SubType.prototype.isPrototypeOf(instance));   //true
 
 ### 谨慎的定义方法
 
-- 子类型有时候需要重写超类型中的某个方法，或者需要添加超类型中不存在的某个方法。**但不管怎样，给原型添加方法的代码一定要放在替换原型的语句之后**
-- **即在通过原型链实现继承时，不能使用对象字面量创建原型方法,因为这样做就会重写原型链**
+- 子类型有时候需要重写超类型中的某个方法，或者需要添加超类型中不存在的某个方法。**但不管怎样，给原型添加方法的代码一定要放在替换原型的语句之后,即在通过原型链实现继承时，不能使用对象字面量创建原型方法,因为这样做就会重写原型链**
 
 ```js
- this.property = true;
+function SuperType() {
+    this.superProperty = "superProperty"
 }
+
 SuperType.prototype.getSuperValue = function(){
  return this.property;
 };
@@ -844,8 +868,8 @@ alert(instance.getSuperValue()); //false
 
 ### 原型链的问题
 
-- **包含引用类型值的原型属性会被所有实例共享；而这也正是为什么要在构造函数中，而不是在原型对象中定义属性的原因**
-- 在通过原型来实现继承时，原型实际上会变成另一个类型的实例。**原先的实例属性也就顺理成章地变成了现在的原型属性了**
+- **包含引用类型值的原型属性会被所有实例共享**；而这也正是为什么要在构造函数中，而不是在原型对象中定义属性的原因
+- **在通过原型来实现继承时，原型实际上会变成另一个类型的实例。原先的实例属性也就顺理成章地变成了现在的原型属性了**
 
 ```js
 function SuperType(){
@@ -909,7 +933,7 @@ instance2.sayAge(); //27
 
 ### 原型式继承
 
-- 是借助原型可以基于已有的对象创建新对象，同时还不必因此创建自定义类型
+- 借助原型可以基于已有的对象创建新对象，同时还不必因此创建自定义类型
 - 在 object()函数内部，先创建了一个临时性的构造函数，然后将传入的对象作为这个构造函数的原型，最后返回了这个临时类型的一个新实例。从本质上讲，object()对传入其中的对象执行了一次浅复制
 - 在没有必要兴师动众地创建构造函数，而只想让一个对象与另一个对象保持类似的情况下，原型式继承是完全可以胜任的。
 - 不过别忘了，**包含引用类型值的属性始终都会共享相应的值，就像使用原型模式一样**
