--- a/web/ES6/02_函数扩展.md
+++ b/web/ES6/02_函数扩展.md
@@ -1,5 +1,17 @@
 # 函数扩展
 
+- [参数的默认值](#参数的默认值)
+- [与解构赋值默认值结合使用](#与解构赋值默认值结合使用)
+- [函数的length属性](#函数的length属性)
+- [作用域](#作用域)
+- [rest参数](#rest参数)
+- [name属性](#name属性)
+- [箭头函数](#箭头函数)
+    - [箭头函数的注意点](#箭头函数的注意点)
+        - [this](#this)
+        - [其它](#其它)
+        - [不适合场合](#不适合场合)
+
 ## 参数的默认值
 
 - **具有默认值的函数参数必须是尾参数**
