--- a/web/javascript高级程序设计/01_基础概念.md
+++ b/web/javascript高级程序设计/01_基础概念.md
@@ -1,5 +1,81 @@
 # 基本概念
 
+- [严格模式](#严格模式)
+- [数据类型](#数据类型)
+    - [Undefined](#undefined)
+    - [null](#null)
+    - [Boolean](#boolean)
+    - [Number类型](#number类型)
+        - [数值范围](#数值范围)
+        - [NaN](#nan)
+        - [Number()](#number)
+        - [parseInt()](#parseint)
+        - [parseFloat()](#parsefloat)
+    - [String](#string)
+- [操作符](#操作符)
+    - [布尔操作符](#布尔操作符)
+    - [逻辑与](#逻辑与)
+    - [逻辑或](#逻辑或)
+    - [乘性操作符](#乘性操作符)
+        - [乘法](#乘法)
+        - [除法](#除法)
+        - [求模](#求模)
+    - [加性操作符](#加性操作符)
+        - [加法](#加法)
+        - [减法](#减法)
+    - [关系操作符](#关系操作符)
+    - [相等操作符](#相等操作符)
+        - [相等](#相等)
+        - [全等与不全等](#全等与不全等)
+    - [逗号](#逗号)
+- [语句](#语句)
+    - [for in](#for-in)
+    - [with 语句](#with-语句)
+    - [switch语句](#switch语句)
+- [函数](#函数)
+- [基本类型与引用类型](#基本类型与引用类型)
+- [类型检查](#类型检查)
+- [执行环境](#执行环境)
+    - [没有块级作用域](#没有块级作用域)
+        - [注意for语句](#注意for语句)
+- [垃圾回收](#垃圾回收)
+- [引用对象](#引用对象)
+- [Array](#array)
+    - [数组的length](#数组的length)
+    - [判断是否是数组](#判断是否是数组)
+    - [toString](#tostring-function toString() { [native code] }1)
+    - [栈方法](#栈方法)
+    - [队列方法](#队列方法)
+    - [重排序](#重排序)
+    - [concat()](#concat)
+    - [slice()](#slice)
+    - [splice()方法](#splice方法)
+    - [迭代方法](#迭代方法)
+    - [归并方法](#归并方法)
+- [Date](#date)
+- [RegExp](#regexp)
+- [Function](#function)
+    - [没有重载](#没有重载)
+    - [函数声明与函数表达式](#函数声明与函数表达式)
+    - [作为值的函数](#作为值的函数)
+    - [函数内部的属性](#函数内部的属性)
+        - [arguments](#arguments)
+        - [this](#this)
+        - [caller](#caller)
+        - [length](#length)
+        - [prototype](#prototype)
+        - [apply，call， bind](#applycall-bind)
+- [基本包装类型](#基本包装类型)
+    - [Boolean包装类](#boolean包装类)
+    - [Number](#number)
+    - [String类型](#string类型)
+- [单体内置对象](#单体内置对象)
+    - [Global](#global)
+        - [URI编码方法](#uri编码方法)
+        - [eval](#eval)
+        - [window对象](#window对象)
+- [Math](#math)
+
 ## 严格模式
 
 ```js
