--- a/web/javascript高级程序设计/02_面象对象程序设计.md
+++ b/web/javascript高级程序设计/02_面象对象程序设计.md
@@ -1,5 +1,34 @@
 # 面向对象
 
+- [属性类型](#属性类型)
+    - [访问器属性](#访问器属性)
+    - [定义多个属性](#定义多个属性)
+    - [读取属性的特性](#读取属性的特性)
+- [创建对象](#创建对象)
+    - [工厂模式](#工厂模式)
+    - [构造函数模式](#构造函数模式)
+    - [原型模式](#原型模式)
+        - [理解原型对象](#理解原型对象)
+        - [属性的查找](#属性的查找)
+        - [原型 与 in](#原型-与-in)
+        - [更简单的原型语法](#更简单的原型语法)
+        - [原型的动态性](#原型的动态性)
+        - [原生对象的原型](#原生对象的原型)
+        - [原型创建对象的问题](#原型创建对象的问题)
+        - [组合使用构造函数模式和原型模式](#组合使用构造函数模式和原型模式)
+        - [动态原型模式](#动态原型模式)
+        - [寄生构造函数模式](#寄生构造函数模式)
+        - [稳妥构造函数模式](#稳妥构造函数模式)
+- [继承](#继承)
+    - [原型链](#原型链)
+    - [确定原型和实例的关系](#确定原型和实例的关系)
+    - [谨慎的定义方法](#谨慎的定义方法)
+    - [原型链的问题](#原型链的问题)
+    - [组合继承](#组合继承)
+    - [原型式继承](#原型式继承)
+    - [寄生式继承](#寄生式继承)
+    - [寄生组合式继承](#寄生组合式继承)
+
 ## 属性类型
 
 - **[[Configurable]]**:表示能否通过 delete 删除属性从而重新定义属性，能否修改属性的特性，或者能否把属性修改为访问器属性。像前面例子中那样直接在对象上定义的属性，它们的这个特性默认值为 true。
@@ -400,9 +429,9 @@ var person1 = new Person();
 var person2 = new Person();
 alert(person1.hasOwnProperty("name"));  //false
 person1.name = "Greg";
-alert(person1.name); //"Greg"——来自实例 
+alert(person1.name); //"Greg"——来自实例
 alert(person1.hasOwnProperty("name")); //true
-alert(person2.name); //"Nicholas"——来自原型 
+alert(person2.name); //"Nicholas"——来自原型
 alert(person2.hasOwnProperty("name")); //false
 delete person1.name;
 alert(person1.name); //"Nicholas"——来自原型
@@ -718,7 +747,7 @@ function SpecialArray(){
     return values;
 }
 var colors = new SpecialArray("red", "blue", "green");
-alert(colors.toPipedString()); //"red|blue|green" 
+alert(colors.toPipedString()); //"red|blue|green"
 ```
 
 #### 稳妥构造函数模式
@@ -1082,3 +1111,5 @@ function object(o){
 ```
 
 - 这个例子的高效率体现在它只调用了一次 SuperType 构造函数，**并且因此避免了在 SubType.prototype 上面创建不必要的、多余的属性。与此同时，原型链还能保持不变**；因此，还能够正常使用instanceof 和 isPrototypeOf()。开发人员普遍认为寄生组合式继承是引用类型最理想的继承范式
+
+[[TOC]]
