--- a/web/javascript高级程序设计/03_函数表达式.md
+++ b/web/javascript高级程序设计/03_函数表达式.md
@@ -1,5 +1,18 @@
 # 函数表达式
 
+- [递归](#递归)
+- [执行环境与作用域](#执行环境与作用域)
+- [闭包](#闭包)
+    - [作用域链](#作用域链)
+    - [闭包与变量](#闭包与变量)
+    - [关于this对象](#关于this对象)
+    - [模仿块级作用域](#模仿块级作用域)
+    - [私有变量](#私有变量)
+        - [在构造函数中定义特权方法](#在构造函数中定义特权方法)
+        - [静态私有变量](#静态私有变量)
+    - [模块模式](#模块模式)
+    - [增强的模块模式](#增强的模块模式)
+
 - **函数声明**
     - 它的一个重要特征就是函数声明提升（function declaration hoisting），意思是在执行代码之前会先读取函数声明
 
