--- a/web/ts/02_接口与类.md
+++ b/web/ts/02_接口与类.md
@@ -1,5 +1,25 @@
 # Interface And Class
 
+-   [接口](#接口)
+    -   [可选属性](#可选属性)
+    -   [只读属性](#只读属性)
+        -   [readonly vs const](#readonly-vs-const)
+    -   [额外的属性检查](#额外的属性检查)
+    -   [函数类型](#函数类型)
+    -   [可索引的类型](#可索引的类型)
+    -   [类类型实现接口](#类类型实现接口)
+    -   [类的静态部分与实例部分](#类的静态部分与实例部分)
+    -   [接口继承](#接口继承)
+    -   [混合类型](#混合类型)
+    -   [接口继承类](#接口继承类)
+-   [Class](#class)
+    -   [public protected private](#public-protected-private)
+    -   [readonly](#readonly)
+    -   [参数属性](#参数属性)
+    -   [存取器](#存取器)
+    -   [静态属性](#静态属性)
+    -   [抽象类](#抽象类)
+
 ## 接口
 
 -   在 TypeScript 里，接口的作用就是为这些类型命名和为你的代码或第三方代码定义契约
@@ -548,5 +568,3 @@ department.printName();
 department.printMeeting();
 department.generateReports(); // 错误: 方法在声明的抽象类中不存在
 ```
-
-###
