--- a/web/ts/03_函数.md
+++ b/web/ts/03_函数.md
@@ -1,5 +1,11 @@
 # 函数
 
+-   [可选参数](#可选参数)
+-   [默认参数](#默认参数)
+-   [剩余参数](#剩余参数)
+-   [重载](#重载)
+-   [this](#this)
+
 -   返回值类型是函数类型的必要部分，如果函数没有返回任何值，你也必须指定返回值类型为 void 而不能留空
 
 ## 可选参数
