--- a/web/ts/05_模块与命名空间.md
+++ b/web/ts/05_模块与命名空间.md
@@ -1,5 +1,11 @@
 # 模块与命名空间
 
+-   [模块](#模块)
+    -   [export = 和 import = require()](#export--和-import--require)
+-   [命名空间](#命名空间)
+    -   [多文件](#多文件)
+    -   [别名](#别名)
+
 ## 模块
 
 -   TypeScript 与 ECMAScript 2015 一样，任何包含顶级 import 或者 export 的文件都被当成一个模块。 相反地，**如果一个文件不带有顶级的 import 或者 export 声明，那么它的内容被视为全局可见的**
