--- a/web/ts/01_基础.md
+++ b/web/ts/01_基础.md
@@ -94,7 +94,7 @@ let bothPlus = [0, ...first, ...second, 5];
 ```
 
 -   对象展开
-    -   是一个浅拷贝，也就是说如果对象的属性为对象，原对象和展开后的对象中的对象属性指向是相同的
+    -   是一个浅拷贝，也就是说如果属性为对象，那么拷贝后与拷贝前指向同一个对象
     -   左至右进行处理，但结果仍为对象。 这就意味着出现在展开对象后面的属性会覆盖前面的属性
     -   它仅包含对象**自身的可枚举属性**
 
@@ -108,6 +108,6 @@ let clone = { ...c };
 clone.p; // ok
 clone.m(); // error!
 
-// class中的方实际上是定义在其prototype中间的
+// class中的方法实际上是定义在其prototype中间的，并且也是不可枚举的，所以不能调用m
 // class中的方法 enumable为false
 ```
