--- a/web/js/00_js代码.md
+++ b/web/js/00_js代码.md
@@ -2,7 +2,7 @@
 
 ## js 方法前面加！
 
--   -   !fun1()()，如果没有这个叹号的话，解析器会认为 function 是一个函数声明的开始，而后面（）将会导致语法错误。在 function 前面加上！号时，就变成了一个函数表达式，而函数表达式后面又添加了一个()就变成了一个立即执行的函数了
+-   !fun1()()，如果没有这个叹号的话，解析器会认为 function 是一个函数声明的开始，而后面（）将会导致语法错误。在 function 前面加上！号时，就变成了一个函数表达式，而函数表达式后面又添加了一个()就变成了一个立即执行的函数了
 
 ```js
 // 函数表达式定义
