--- a/web/坑.md
+++ b/web/坑.md
@@ -4,35 +4,35 @@
 
 ### for in 数组
 
-- 普通for循环中的i为number类型
-- **for in 如果遍历数组，i返回的是数组的下标，并且类型是string,数组中的值要重新去取**
+-   普通 for 循环中的 i 为 number 类型
+-   **for in 如果遍历数组，i 返回的是数组的下标，并且类型是 string,数组中的值要重新去取**
 
 ```js
-    var arr = [ 3, 4, 5, 6];
-    for (var i = 0; i < arr.length; ++i) {
-        // 返回类型为number
-        console.log("typeof i:" + (typeof i), arr[i]);
-    }
+var arr = [3, 4, 5, 6];
+for (var i = 0; i < arr.length; ++i) {
+    // 返回类型为number
+    console.log('typeof i:' + typeof i, arr[i]);
+}
 
-    for (var j in arr) {
-        // 返回类型为string,并且是下标，而不是数组中的值
-        console.log("typeof j:" + (typeof j), ",j:" + j, arr[j]);
-    }
+for (var j in arr) {
+    // 返回类型为string,并且是下标，而不是数组中的值
+    console.log('typeof j:' + typeof j, ',j:' + j, arr[j]);
+}
 
-    // typeof i:number 3
-    // ...
-    // typeof j:string ,j:0 3
+// typeof i:number 3
+// ...
+// typeof j:string ,j:0 3
 ```
 
 ### for in 对象
 
-- for in 对象 返回的是对象的属性与函数
+-   for in 对象 返回的是对象的属性与函数名
 
 ```js
 var obj = {
-    "key1": "value1",
-    "key2": "value2",
-    "key3": "value3"
+    key1: 'value1',
+    key2: 'value2',
+    key3: 'value3'
 };
 
 // key1
