--- a/kotlin/01_基础.md
+++ b/kotlin/01_基础.md
@@ -1,5 +1,18 @@
 # Kotlin
 
+-   [变量](#变量)
+-   [基本类型](#基本类型)
+-   [数组](#数组)
+-   [无符号整型](#无符号整型)
+-   [字符串](#字符串)
+-   [包](#包)
+-   [顶层声明的可见性](#顶层声明的可见性)
+-   [表达式](#表达式)
+    -   [if](#if)
+    -   [when 表达式](#when-表达式)
+    -   [for 循环](#for-循环)
+    -   [标签](#标签)
+
 ## 变量
 
 -   **val 只能赋值一次, 相当于 java 中的 final**
