kotlin 类与对象 函数与lambda

--- a/kotlin/02_类与对象.md
+++ b/kotlin/02_类与对象.md
@@ -6,6 +6,25 @@
     -   [属性覆盖](#属性覆盖)
     -   [派生类初始化顺序](#派生类初始化顺序)
     -   [super](#super)
+    -   [abstract](#abstract)
+-   [属性与字段](#属性与字段)
+    -   [const](#const)
+    -   [延迟初始化属性与变量](#延迟初始化属性与变量)
+    -   [接口](#接口)
+-   [可见性](#可见性)
+-   [扩展](#扩展)
+    -   [扩展函数](#扩展函数)
+    -   [可空接收者](#可空接收者)
+    -   [扩展属性](#扩展属性)
+    -   [伴生对象的扩展](#伴生对象的扩展)
+    -   [拓展声明成员](#拓展声明成员)
+-   [数据类 data](#数据类-data)
+    -   [copy 函数](#copy-函数)
+    -   [Component 函数](#component-函数)
+    -   [Pair 与 Triple](#pair-与-triple)
+-   [密封类](#密封类)
+
+<!-- /TOC -->
 
 ## 构造函数
 
@@ -564,7 +583,355 @@ fun main(args: Array<String>) {
     println(p2.toString())
 
     val p3 = Person()
-    // true,equals函数只会参考主构造函数中的属性，所以这里name都为Default,也就是相等的
+    // true,equals函数默认只会参考主构造函数中的属性，所以这里name都为Default,也就是相等的
     println(p2 == p3)
+}
+```
+
+### copy 函数
+
+-   相当于 C++中的拷贝构造函数
+-   **data 类中默认使用主构造函数中的属性生成 copy 函数，但是可以手动指定属性生成**
+
+```kotlin
+data class Person(var name: String = "Default") {
+    var age: Int = 0
+
+    fun copy(name: String, age :Int) : Person {
+        val p = Person(name)
+        p.age = age
+        return p
+    }
+}
+
+val p = Person("Kotlin")
+val p4 = p.copy(name = "test", age = 100)
+// p4 ("test", 100)
+```
+
+### Component 函数
+
+### Pair 与 Triple
+
+## 密封类
+
+## 嵌套类与内部类
+
+-   内部类,inner，包含外部类的引用
+-   嵌套类，相当于 java 中的 static 内部类，没有 inner
+
+```kotlin
+class Outer {
+    val str1: String = "str1"
+
+    companion object {
+        const val str2: String = "str2"
+    }
+
+    class A {
+        // 相当于static class 只能引用companion object中的对象
+        fun log() {
+            println(Outer.str2)
+        }
+    }
+
+    inner class B {
+        private val str1: String = "inner str1"
+
+        fun log() {
+            println(Outer.str2)
+            println(this@Outer.str1)
+            println(this@B.str1)
+            println(this.str1)
+        }
+    }
+}
+
+fun main(args: Array<String>) {
+    Outer.A().log()
+    // inner class与java一样，必须有外部对象，才能有内部对象
+    Outer().B().log()
+}
+```
+
+### 匿名内部类
+
+-   对象表达式
+-   函数式 java 接口，使用带有前缀的 lambada 表达式
+
+```kotlin
+package rancune.kotlin.nest
+
+/**
+ * Created by Rancune@126.com on 2019/3/5.
+ */
+
+interface A {
+    fun f()
+
+    fun g()
+}
+
+class Anonymous {
+    private var a: A? = null
+
+    fun setA(a: A) {
+        this.a = a
+    }
+}
+
+fun main(args: Array<String>) {
+    val o = Anonymous()
+    o.setA(object : A {
+        override fun g() {
+        }
+
+        override fun f() {
+        }
+    })
+}
+```
+
+## 枚举
+
+## 对象
+
+### 对象表达式
+
+-   创建继承自某个/某些类型的匿名类对象
+-   **匿名对象只有定义成局部变量和 private 成员变量时，才能体现它的真实类型。如果你是将匿名对象作为 public 函数的返回值或者是 public 属性时，你只能将它看做是它的父类，当然你不指定任何类型时就当做 Any 看待。这时，你在匿名对象中添加的属性和方法是不能够被访问的**
+
+```kotlin
+open class A(open val x: Int) {
+    private fun foo() = object {
+        val x: String = "x"
+    }
+
+    fun publicFoo() = object {
+        val x: String = "x"
+    }
+
+    fun bar() {
+        // 局部变量，private成员变量，private方法返回值，真实类型
+        foo().x
+        // public方法返回类型，只能将它看作它的父类
+        // publicFoo().x
+    }
+}
+
+interface B {
+    fun f()
+}
+
+fun main(args: Array<String>) {
+    val ab: A = object : A(1), B {
+        override val x: Int
+            get() = 100
+
+        override fun f() {
+        }
+    }
+
+    val xy = object {
+        var x: Int = 100
+        var y: Int = 101
+    }
+
+    println("x + y = ${xy.x + xy.y}")
+}
+```
+
+-   **对象表达式中的代码可以访问来自包含它的作用域的变量，不仅限于 final 变量**
+
+### 对象声明
+
+[Kotlin 学习系列之：object 关键字的使用场景](https://blog.csdn.net/xlh1191860939/article/details/79460601)
+
+#### 单例
+
+-   线程安全
+-   不能在局部作用域，可以嵌套到其他对象声明或非内部类中
+
+```kotlin
+object Manager {
+    fun f() {}
+}
+
+Manager.f()
+```
+
+#### 伴生对象
+
+-   **伴生对象可以继承类，实现接口**
+-   伴生对象可以命名，没有指定名字时，命名为 Companion
+-   **伴生对象虽然类似于 java 中的 static 对象，但是对象实际上是真实存在**
+
+```kotlin
+class Obj {
+    companion object {
+        const val a: Int = 100
+
+        fun f() {
+
+        }
+    }
+}
+
+fun main(args: Array<String>) {
+    val c = Obj.Companion
+    // c是真实存在的对象
+    println(c)
+    println(c.a)
+    println(Obj.a)
+}
+```
+
+-   **JVM 平台，如果使用@JvmStatic 注解，可以将伴生对象的成员生成为真正的静态方法与字段**
+
+### 对象表达式与对象声明之间的区别
+
+-   对象表达式是在使用他们的地方立即初始化执行的
+-   对象声明，单例是在第一次被访问到时延迟初始化的
+-   伴生对象的初始化是在相应的类被加载时，与 Java 静态初始化器的语义一样
+
+## 内联类
+
+[kotlin 的内联函数的使用](https://www.jianshu.com/p/4f29c9724b33)
+
+## 委托
+
+-   其实就是代理模式
+-   **委托方法可以重写，覆盖被代理对象的实现**
+-   **委托对象的成员只能访问其自身对接口成员的实现，也就是被代理对象不能访问生成的代理中的属性**
+
+```kotlin
+interface Base {
+    fun print()
+    fun printOverride()
+
+    val message: String
+    fun printMessage()
+}
+
+class BaseImpl : Base {
+
+    override fun print() {
+        println("BaseImpl, print")
+    }
+
+    override fun printOverride() {
+        println("BaseImpl, printOverride")
+    }
+
+    override val message: String = "BaseImpl message"
+
+    override fun printMessage() {
+        println(message)
+    }
+}
+
+class Derived(b: Base) : Base by b {
+    override val message: String = "Derived message"
+
+    override fun printOverride() {
+        println("Derived, printOverride")
+    }
+}
+
+fun main(args: Array<String>) {
+    val b = BaseImpl()
+    val proxy = Derived(b)
+    // 访问的是b对象中的方法
+    proxy.print()  // BaseImpl, print
+    // 因为方法被重写了
+    proxy.printOverride()   // Derived, printOverride
+    // proxy调用printMessage,而proxy中printMessage没有被重写，所以访问的是b中的方法，b肯定不能方总会proxy/// 中的message,所以打印出来的肯定是BaseImpl message
+    proxy.printMessage()    // BaseImpl message
+}
+```
+
+## 委托属性
+
+-   **属性委托指的是一个类的某个属性值不是在类中直接进行定义，而是将其托付给一个代理类，从而实现对该类的属性统一管理**
+
+```kotlin
+class Example {
+    var x: String by Delegate()
+}
+
+class Delegate {
+    // 想要改map,需要MutableMap
+    private val map: MutableMap<String, String> = HashMap()
+
+    operator fun getValue(example: Example, property: KProperty<*>): String {
+        return map.getOrDefault(property.name, "")
+    }
+
+    operator fun setValue(example: Example, property: KProperty<*>, s: String) {
+         map["test"] = s
+    }
+}
+```
+
+### lazy
+
+-   lazy 接受一个 lambda 并返回一个 lazy&lt;T&gt;实例的函数，返回的实例可以作为实现延迟属性的委托，第一次调用 get()会执行已传递给 lazy()的 lambda 表达式并记录结果，后续调用 get()只是返回结果
+-   **lazy 必须用 val**
+-   默认是同步锁的，如果不需要传入 LazyThreadSafetyMode.PUBLICATION
+
+```kotlin
+val lazyValue: String by lazy {
+    println("computed")
+    "Hello"
+}
+
+fun main(args: Array<String>) {
+    // 第一次使用lazyValue时，会执行传入的函数
+    println(lazyValue)  // computed Hello
+    println(lazyValue)  // Hello
+}
+```
+
+### 可观察属性 Observable
+
+-   每当我们给属性赋值时，会调用回调
+
+```kotlin
+var observable: String by Delegates.observable("before") {
+    _, oldValue, newValue -> println("$oldValue -> $newValue")
+}
+
+// 当我们给observable赋值的时候，就会打印变化
+ observable = "after"       // before -> after
+```
+
+-   vetoable，截获一个赋值并否决它
+
+### 把属性储存在映射中
+
+```kotlin
+class User(private val map: MutableMap<String, Any?>) {
+    var name: String by map
+    var gender: String? by map
+}
+
+val user = User(mutableMapOf(
+            "name" to "John"
+            //"gender"  to "female"
+    ))
+
+    println(user.name)
+    // 这里有一个问题，就是如果原先的map中不含有gender这个属性,这里直接会crash
+    println(user.gender)
+```
+
+### 局部委托属性
+
+-   支持局部属性
+
+```kotlin
+fun example(compute: () -> String) {
+    val m by lazy(compute)
+    println(m)
 }
 ```
