--- a/kotlin/02_类与对象.md
+++ b/kotlin/02_类与对象.md
@@ -23,8 +23,22 @@
     -   [Component 函数](#component-函数)
     -   [Pair 与 Triple](#pair-与-triple)
 -   [密封类](#密封类)
-
-<!-- /TOC -->
+-   [嵌套类与内部类](#嵌套类与内部类)
+    -   [匿名内部类](#匿名内部类)
+-   [枚举](#枚举)
+-   [对象](#对象)
+    -   [对象表达式](#对象表达式)
+    -   [对象声明](#对象声明)
+        -   [单例](#单例)
+        -   [伴生对象](#伴生对象)
+    -   [对象表达式与对象声明之间的区别](#对象表达式与对象声明之间的区别)
+-   [内联类](#内联类)
+-   [委托](#委托)
+-   [委托属性](#委托属性)
+    -   [lazy](#lazy)
+    -   [可观察属性 Observable](#可观察属性-observable)
+    -   [把属性储存在映射中](#把属性储存在映射中)
+    -   [局部委托属性](#局部委托属性)
 
 ## 构造函数
 
